Bug 1409640 - Remove menulist-dropmarker's margin top and bottom values in preferences.css then the smaller values (in common.css) will be applied since the space for the drop marker image is too small. r=dao
MozReview-Commit-ID: FT5DslnUqkK

UltraBlame original commit: 0efc275f78e6935dda99574aa8ffeb26cc9874d5

--- a/browser/themes/linux/preferences/in-content/preferences.css
+++ b/browser/themes/linux/preferences/in-content/preferences.css
@@ -174,28 +174,6 @@ top
 important
 ;
 }
-menulist
-.
-actionsMenu
->
-.
-menulist
--
-dropmarker
-{
-margin
--
-top
-:
-11px
-;
-margin
--
-bottom
-:
-11px
-;
-}
 filefield
 +
 button
